--- a/sass/style.scss
+++ b/sass/style.scss
@@ -71,6 +71,9 @@ html, body {
   display: none;
   overflow-y: auto;
   overflow-x: hidden;
+  .modal{
+    cursor: pointer;
+  }
   .black_panel {
     position: absolute;
     width: 100%;
