--- a/css/style.css
+++ b/css/style.css
@@ -2297,7 +2297,8 @@ header {
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 56.49%;
+  width: 100%;
+  max-width: 660px;
   background: #f5f6fa;
   background: -moz-linear-gradient(top, #f5f6fa 0%, #f5e9cf 100%);
   background: -webkit-linear-gradient(top, #f5f6fa 0%, #f5e9cf 100%);
@@ -2319,6 +2320,10 @@ header {
     border-right: 1px solid #783938;
     box-sizing: border-box;
     padding: 0px 9px; }
+    @media (max-width: 405px) {
+      .brend_block_box {
+        width: 100%;
+        border-bottom: 1px solid #783938; } }
     .brend_block_box:last-child {
       border: none;
       padding-right: 0px; }
@@ -2373,6 +2378,9 @@ header {
       width: 65.67%;
       box-sizing: border-box;
       min-height: 69px; }
+      @media (max-width: 597px) {
+        .brend_block_footer_winner {
+          width: 100%; } }
       .brend_block_footer_winner_text {
         float: left; }
         .brend_block_footer_winner_text h5 {
@@ -2408,6 +2416,10 @@ header {
         display: block;
         font-weight: bold;
         margin-top: 15px; }
+      @media (max-width: 597px) {
+        .brend_block_footer_brend_all {
+          width: 100%;
+          text-align: center; } }
 
 .area_block {
   position: absolute;
@@ -3743,6 +3755,9 @@ header {
       box-sizing: border-box;
       background: #010206;
       padding: 1px; }
+      @media (max-width: 405px) {
+        .header_mini .header_nav .header_nav_sandwich {
+          float: right; } }
       .header_mini .header_nav .header_nav_sandwich:hover {
         background: none;
         border: 2px solid #b80000;
@@ -3780,6 +3795,11 @@ header {
       width: auto;
       float: left;
       background: none; }
+      @media (max-width: 405px) {
+        .header_mini .header_nav .header_nav_logo_line {
+          float: left; }
+          .header_mini .header_nav .header_nav_logo_line a {
+            margin-left: 0px; } }
       .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_sity {
         display: none; }
       .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_schem {
@@ -3794,6 +3814,9 @@ header {
         display: block;
         margin-top: 7px;
         margin-left: 27px; }
+        @media (max-width: 405px) {
+          .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo a {
+            margin-left: 0px; } }
         .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo a:hover {
           background-image: url("../img/sprite_header.png");
           background-position: -31px -175px; }
@@ -3842,6 +3865,9 @@ header {
           top: 11px;
           right: 7px;
           margin-left: 10.1px; }
+        @media (max-width: 405px) {
+          .header_mini .header_nav .header_nav_katalog .all_mini {
+            display: none; } }
       .header_mini .header_nav .header_nav_katalog .open:before {
         background: url("../img/sprite_header.png");
         background-position: -354px -64px; }
@@ -3873,6 +3899,9 @@ header {
     width: 100%;
     min-height: 0;
     background: none; }
+    @media (max-width: 405px) {
+      .header_mini .header_kontakt_line {
+        text-align: center; } }
     .header_mini .header_kontakt_line .ring {
       float: left;
       width: auto;
@@ -3881,6 +3910,10 @@ header {
       font-weight: normal;
       font-weight: bold;
       color: #840000; }
+      @media (max-width: 405px) {
+        .header_mini .header_kontakt_line .ring {
+          float: none;
+          display: inline-block; } }
       .header_mini .header_kontakt_line .ring span {
         font-size: 12px; }
       .header_mini .header_kontakt_line .ring p {
@@ -3898,6 +3931,10 @@ header {
       float: right;
       font: 14px/38px Verdana;
       color: #024753; }
+      @media (max-width: 405px) {
+        .header_mini .header_kontakt_line .meil {
+          float: none;
+          display: inline-block; } }
       .header_mini .header_kontakt_line .meil p {
         display: none; }
       .header_mini .header_kontakt_line .meil .icon-mail_header {
