--- a/sass/schem.scss
+++ b/sass/schem.scss
@@ -14,9 +14,17 @@
   top: -22px;
   left: 10%;
   padding: 35.5px;
+  width: 100%;
+  max-width: 632px;
   background: #FFFFFF;
   z-index: 9;
   display: none;
+  @media(max-width: 778px){
+    left:0px;
+    min-width: 100%;
+    padding: 20px 10px;
+    box-sizing: border-box;
+  }
   .close_mini {
     position: absolute;
     width: 15px;
@@ -26,14 +34,19 @@
     margin: 0;
     top: 15px;
     right: 15px;
+
   }
   .img {
     float: left;
     display: block;
-    margin-right: 24px;
+    width: 31%;
+    margin-right: 3.3%;
     -webkit-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
     -moz-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
     box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+    @media(max-width: 778px){
+      text-align: center;
+    }
     &:nth-last-child(1){
       margin-right: 0px;
     }
@@ -103,9 +116,14 @@
         }
       }
     }
+    &_table{
+      width: 100%;
+      height:100%;
+      display: table;
+    }
     &_img_block {
       width: 770px;
-      height: 565px;
+      height: 100%;
       display: table-cell;
       vertical-align: middle;
       background: #C0C0C0;
