--- a/sass/header.scss
+++ b/sass/header.scss
@@ -159,6 +159,7 @@
         float: right;
         font: 11px/40px Verdana;
         color: #363636;
+        margin-top: 5px;
         @media(max-width: 886px) {
           display: none;
         }
@@ -169,7 +170,6 @@
         font: 14px/30px 'Georgia-BoldItalic';
         font-weight: bold;
         font-style: italic;
-        margin-top: 10px;
         color: #5d7489;
         float: right;
         &:hover{
@@ -274,6 +274,7 @@
           position: relative;
           &:hover{
             color: #074e23;
+            border-color: #074e23;
           }
           @media(max-width: 1070px) {
             padding: 0px;
@@ -717,6 +718,7 @@
           text-align: center;
           &:hover{
             color: #074e23;
+            border-color: #620909;
           }
           &:nth-last-child(1) {
             margin-right: 0px;
